# vacuum_cleaner_bot

./: CMakeLists.txt  README.md  package.xml
include/: vc_bot.hpp
launch/: ros_bag.launch.py  spawn_turtlebot3.launch.py  vacuum_cleaner_bot.launch.py
results/: cppcheck.txt  cpplint.txt
results/bag_file/: metadata.yaml
src/: main.cpp  vc_bot.cpp
